--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,27 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  	<style>
+      /*
+          Use the DejaVu Sans font for displaying and embedding in the PDF file.
+          The standard PDF fonts do not support Unicode characters.
+      */
+      div {
+        font-family: "DejaVu Sans", "Arial", sans-serif;
+        font-size: 12px;
+      }
+  
+      /*
+        The example loads the DejaVu Sans from the Kendo UI CDN.
+        Other fonts have to be hosted from your application.
+        The official site of the Deja Vu Fonts project is
+        https://dejavu-fonts.github.io/.
+      */
+      @font-face {
+        font-family: "DejaVu Sans";
+        src: url("https://kendo.cdn.telerik.com/2017.2.621/styles/fonts/DejaVu/DejaVuSans.ttf") format("truetype");
+      }
+    </style>
   <title>React App</title>
 </head>
 
@@ -25,6 +46,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
     crossorigin="anonymous"></script>
+    <!-- --------Chatbot------------------ -->
     <script type="text/javascript">
       (function(d, m){
           var kommunicateSettings = 
@@ -36,6 +58,7 @@
       })(document, window.kommunicate || {});
   /* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
   </script>
+  <!-- --------Chatbot------------------ -->
 </body>
 
 </html>
